@@ -1,1 +1,1 @@
-agar.gui.widget.tlist agar-gui-widget-tlist.ads
+agar.gui.widget.tlist agar-gui-widget-tlist.ads agar-gui-widget-tlist.adb
