@@ -1,1 +1,1 @@
-agar.gui.widget.toolbar agar-gui-widget-toolbar.ads
+agar.gui.widget.toolbar agar-gui-widget-toolbar.ads agar-gui-widget-toolbar.adb
