@@ -16,7 +16,9 @@ struct install_item insthier[] = {
   {INST_COPY, "ag_pixmap.c", 0, ctxt_repos, 0, 0, 0644},
   {INST_COPY, "ag_scrollbar.c", 0, ctxt_repos, 0, 0, 0644},
   {INST_COPY, "ag_surface.c", 0, ctxt_repos, 0, 0, 0644},
+  {INST_COPY, "ag_table.c", 0, ctxt_repos, 0, 0, 0644},
   {INST_COPY, "ag_text.c", 0, ctxt_repos, 0, 0, 0644},
+  {INST_COPY, "ag_textbox.c", 0, ctxt_repos, 0, 0, 0644},
   {INST_COPY, "ag_unit.c", 0, ctxt_repos, 0, 0, 0644},
   {INST_COPY, "ag_vbox.c", 0, ctxt_repos, 0, 0, 0644},
   {INST_COPY, "ag_widget.c", 0, ctxt_repos, 0, 0, 0644},
@@ -174,6 +176,18 @@ struct install_item insthier[] = {
   {INST_COPY, "agar-gui-widget-separator.adb", 0, ctxt_incdir, 0, 0, 0644},
   {INST_COPY, "agar-gui-widget-slider.adb", 0, ctxt_repos, 0, 0, 0644},
   {INST_COPY, "agar-gui-widget-slider.adb", 0, ctxt_incdir, 0, 0, 0644},
+  {INST_COPY, "agar-gui-widget-socket.adb", 0, ctxt_repos, 0, 0, 0644},
+  {INST_COPY, "agar-gui-widget-socket.adb", 0, ctxt_incdir, 0, 0, 0644},
+  {INST_COPY, "agar-gui-widget-table.adb", 0, ctxt_repos, 0, 0, 0644},
+  {INST_COPY, "agar-gui-widget-table.adb", 0, ctxt_incdir, 0, 0, 0644},
+  {INST_COPY, "agar-gui-widget-textbox.adb", 0, ctxt_repos, 0, 0, 0644},
+  {INST_COPY, "agar-gui-widget-textbox.adb", 0, ctxt_incdir, 0, 0, 0644},
+  {INST_COPY, "agar-gui-widget-tlist.adb", 0, ctxt_repos, 0, 0, 0644},
+  {INST_COPY, "agar-gui-widget-tlist.adb", 0, ctxt_incdir, 0, 0, 0644},
+  {INST_COPY, "agar-gui-widget-toolbar.adb", 0, ctxt_repos, 0, 0, 0644},
+  {INST_COPY, "agar-gui-widget-toolbar.adb", 0, ctxt_incdir, 0, 0, 0644},
+  {INST_COPY, "agar-gui-widget-ucombo.adb", 0, ctxt_repos, 0, 0, 0644},
+  {INST_COPY, "agar-gui-widget-ucombo.adb", 0, ctxt_incdir, 0, 0, 0644},
   {INST_COPY, "agar-gui-widget-vbox.adb", 0, ctxt_repos, 0, 0, 0644},
   {INST_COPY, "agar-gui-widget-vbox.adb", 0, ctxt_incdir, 0, 0, 0644},
   {INST_COPY, "agar-gui-widget.adb", 0, ctxt_repos, 0, 0, 0644},
